defects have been corrected
